--- a/dashboard.css
+++ b/dashboard.css
@@ -18,6 +18,10 @@ html {
   left: 0;
   overflow-y: auto;
   transition: all 0.3s ease; /* Smooth transition for hover */
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
 }
 
 .sidebar.expanded {
@@ -28,16 +32,28 @@ html {
   width: 60px;
   transform: translateX(0);
 }
+#sidebarToggle {
+  font-size: 24px; /* Adjust size for visibility */
+  color: white;
+  cursor: pointer;
+  margin-bottom: 20px; /* Spacing below the toggle icon */
+  transition: color 0.3s ease;
+}
 
-
+#sidebarToggle:hover {
+  color: gold; /* Highlight on hover */
+}
+/* Menu */
 .sidebar ul {
   list-style: none;
   padding: 0;
-  margin: 0;
+  margin-top: 60px;
+  width: 100%;
 }
 
 .sidebar ul li {
-  margin: 20px 0;
+  margin: 30px 0;
+  width: 100%;
   position: relative;
 }
 
@@ -47,17 +63,19 @@ html {
   font-size: 18px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   transition: color 0.3s ease;
   position: relative;
+  
 }
 
 .sidebar ul li a i {
   font-size: 20px;
+  margin-right: 15px;
 }
 
 .sidebar ul li a:hover {
-  color: #0f0872;
+  color: gold;
 }
 
 .sidebar ul li a span {
