--- a/dashboard.css
+++ b/dashboard.css
@@ -1,20 +1,20 @@
 
 .dashboard {
   width: 100%;
-  margin-top: 70px;
-  margin-bottom: -65px;
-  max-width: 1200px;
-  background-color: rgb(240, 241, 240);
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin-top: 80px;
+  /* margin-bottom: -65px; */
+  background-color: #F6F5F5;
+  box-shadow: 10px 0 10px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
   align-items: center;
-  justify-content: end;
+  justify-content: center;
   overflow: hidden; /* Prevents content from overflowing */
 }
+
 .dashboardbar {
   display: flex;
-  flex-direction: column;
-  gap: 20px;
+  flex-direction: row;
+  gap: 4px;
 }
 
 .time-date {
