--- a/sidebar.css
+++ b/sidebar.css
@@ -3,7 +3,8 @@ body,
 html {
   margin: 0;
   padding: 0;
-  font-family: Arial, sans-serif;
+  background-color: #F6F5F5;
+  font-family: Times, sans-serif;
   box-sizing: border-box;
 }
 
