--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -1,8 +1,18 @@
-
+html,body{
+  height: 100%;
+  scroll-behavior: smooth;
+  overflow-y: auto;
+  margin: 0;
+}
+#content{
+  flex-grow: 0;
+  height: 100vh;
+  overflow-y: auto;
+}
 .dashboard {
   width: 100%;
   margin-top: 80px;
-  /* margin-bottom: -65px; */
+  margin-bottom: -65px;
   background-color: #F6F5F5;
   box-shadow: 10px 0 10px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
